@@ -231,15 +231,46 @@ class JSchemaChangeset
 			$queries = JDatabaseDriver::splitSql($buffer);
 			foreach ($queries as $query)
 			{
-				if (trim($query))
+				if ($trimmedQuery = $this->trimQuery($query))
 				{
 					$fileQueries = new stdClass;
 					$fileQueries->file = $file;
-					$fileQueries->updateQuery = $query;
+					$fileQueries->updateQuery = $trimmedQuery;
 					$result[] = $fileQueries;
 				}
 			}
 		}
 		return $result;
+	}
+
+	/**
+	 * Trim comment and blank lines out of a query string
+	 *
+	 * @param   string  $query  query string to be trimmed
+	 *
+	 * @return  string  String with leading comment lines removed
+	 *
+	 * @since   3.1
+	 */
+	private function trimQuery($query)
+	{
+		$query = trim($query);
+
+		while (substr($query, 0, 1) == '#' || substr($query, 0, 2) == '--' || substr($query, 0, 2) == '/*')
+		{
+			$endChars = (substr($query, 0, 1) == '#' || substr($query, 0, 2) == '--') ? "\n" : "*/";
+
+			if ($position = strpos($query, $endChars))
+			{
+				$query = trim(substr($query, $position + strlen($endChars)));
+			}
+			else
+			{
+				// If no newline, the rest of the file is a comment, so return an empty string.
+				return '';
+			}
+		}
+
+		return trim($query);
 	}
 }
